# kids-rewards

./: .gitignore  .mcp.example.json  CLAUDE.md  HOME_ASSISTANT.md  IMPLEMENTATION_COMPLETE.md  Justfile  README.md  README_BOTTOM.md  READY_TO_MERGE.md  SPIKE_FEEDING_IMPLEMENTATION.md  SPIKE_FEEDING_TEST_PLAN.md  SPIKE_TESTS_PASSING.md  TDD_PLAN_REVISED.md  TROUBLESHOOTING.md  local-env.example.json  package-lock.json  run_server.py  test_chore_submission.sh
.aws-sam/: build.toml
backend/: .dockerignore  Dockerfile  care_guide.py  crud.py  daily_tasks.py  envelope.py  local-env.example.json  main.py  models.py  pet_care.py  pyproject.toml  requirements.txt  run_local.sh  security.py  template.yaml
backend/.aws-sam/: build.toml
backend/tests/: conftest.py  create_test_chore_log.py  helpers.py  test_api_key.py  test_approval_curl.sh  test_approval_new.sh  test_auth_enforcement.py  test_bearded_dragon_endpoint.py  test_care_guide.py  test_chore_approval.py  test_chore_approval_integration.py  test_chore_log.json  test_chore_log2.json  test_daily_tasks.py  test_effort_tracking.py  test_envelope.py  test_final_approval.sh  test_home_assistant.py  test_models.py  test_pagination.py  test_pet_care.py  test_security.py  test_spike_feeding.py  test_spike_integration.py
data/: shared-local-instance.db
frontend/: package-lock.json  package.json  playwright.config.ts
mcp_server/: server.py
scripts/: create_character_tables.py  migrate_to_families.py  seed_characters.py  seed_characters_api.py  seed_characters_aws_cli.sh  seed_dynamodb.py  setup_local_tables.py  (+2 more)
(+55 files in other folders)
